update clang witn c++11

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,5 +29,8 @@
         "utility": "cpp",
         "algorithm": "cpp",
         "cmath": "cpp"
-    }
+    },
+    "clang.cxxflags": [
+        "-std=c++11"
+    ]
 }
