--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "launchOptionType":"Local",
             "targetArchitecture": "x86_64",
             "miDebuggerPath": "D:\\Cygwin64\\bin\\gdb.exe",
-            "program": "${workspaceRoot}\\out.exe", 
+            "program": "${workspaceRoot}/out.exe", 
             "args": [],
             "stopAtEntry": false,                   // 设为true时程序将暂停在程序入口处
             "cwd": "${workspaceRoot}",              // 调试程序时的工作目录
