--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,7 +29,13 @@
         "utility": "cpp",
         "algorithm": "cpp",
         "cmath": "cpp",
-        "__functional_03": "cpp"
+        "__functional_03": "cpp",
+        "__config": "cpp",
+        "__nullptr": "cpp",
+        "cstddef": "cpp",
+        "bitset": "cpp",
+        "iterator": "cpp",
+        "string_view": "cpp"
     },
     "clang.cxxflags": [
         "-std=c++11"
