--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,7 +35,8 @@
         "cstddef": "cpp",
         "bitset": "cpp",
         "iterator": "cpp",
-        "string_view": "cpp"
+        "string_view": "cpp",
+        "__locale": "cpp"
     },
     "clang.cxxflags": [
         "-std=c++11"
