--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,6 +16,7 @@
             "type": "shell",
             "command": "/usr/bin/g++",
             "args": [
+                "-std=c++11",
                 "-g",
                 "${file}",
                 "${fileDirname}/utils.cpp",
@@ -28,7 +29,10 @@
             "problemMatcher": [
                 "$gcc"
             ],
-            "group": "build"
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         }
     ]
 }
